--- a/style.css
+++ b/style.css
@@ -39,6 +39,18 @@ button:disabled {
   cursor: none;
 }
 
+.column {
+  border: 1px solid black;
+  border-radius: 25;
+  color: white;
+  padding: 5px;
+  margin: 5px 5px 5px 5px;
+  cursor: pointer;
+}
+
+.column:hover {
+}
+
 a {
   color: var(--accent-color);
   font-weight: 900;
