--- a/style.css
+++ b/style.css
@@ -24,33 +24,6 @@ button {
   clear: both;
 }
 
-button {
-  background: var(--accent-color);
-  border-radius: var(--radius);
-  color: white;
-  border: 0;
-  padding: 12px 16px;
-  margin-top: 16px;
-  font-weight: 600;
-  cursor: pointer;
-  transition: all 0.2s ease;
-  display: block;
-}
-
-button:hover {
-  filter: contrast(115%);
-}
-
-button:active {
-  transform: translateY(0px) scale(0.98);
-  filter: brightness(0.9);
-}
-
-button:disabled {
-  opacity: 0.5;
-  cursor: none;
-}
-
 a {
   color: var(--accent-color);
   font-weight: 900;
@@ -99,4 +72,46 @@ nav {
   padding-right: 90px;
   font-size: 20px;
   padding: 20px;
+}
+
+.cartBtn {
+  cursor: pointer;
+  color: white;
+  background-color: lightblue;
+  boarder: 1px solid white;
+  border-radius: 10;
+  font-size: x-larger;
+}
+
+.cart-onBtn {
+  color:white;
+  width: 50px;
+  height: 50px;
+}
+
+.cartBtn:hover {
+  animation: cartBtnClicked;
+}
+
+.cartBtn:active {
+  animation: cartBtnclicked;
+}
+
+@keyframes cartBtnClicked {
+  10% {
+  }
+  20% {
+  }
+  30% {
+  }
+  40% {
+  }
+  50% {
+  }
+  60% {
+  }
+  80% {
+  }
+  100% {
+  }
 }
