--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ nav {
   cursor: pointer;
   color: white;
   background-color: lightblue;
-  boarder: 1px solid white;
+  border: 1px solid white;
   border-radius: 10;
   font-size: x-larger;
 }
