--- a/style.css
+++ b/style.css
@@ -64,7 +64,11 @@ nav {
   justify-content: center;
   padding: none;
   margin: none;
+}
+
+nav.stick {
   position: sticky;
+  top: 0;
 }
 
 .menu {
