--- a/style.css
+++ b/style.css
@@ -8,6 +8,15 @@ main {
   width: 480px;
 }
 
+aside {
+  width: 30%;
+  padding-left: 15px;
+  margin-left: 15px;
+  float: right;
+  font-style: italic;
+  background-color: lightgray;
+}
+
 button {
   background-color: var(--accent-color);
 }
