--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ nav {
 .cartBtn {
   cursor: pointer;
   color: white;
-  background-color: lightblue;
+  background-color: yellow;
   border: 1px solid white;
   border-radius: 10;
   font-size: x-larger;
