--- a/style.css
+++ b/style.css
@@ -89,10 +89,10 @@ nav {
   color: white;
   background-color: yellow;
   border: 1px solid white;
-  border-radius: 10;
-  font-size: 20px;
+  border-radius: 10px;
+  font-size: 40px;
   display: inline-block;
-  padding: 15px 15px 5px 5px;
+  padding: 20px 20px 5px 5px;
 }
 
 .in {
