--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@ select {
   border: 1px solid #efefef;
 }
 
+th{
+  cursor: pointer;
+}
+
 #payment-form {
   border: #F6F9FC solid 1px;
   border-radius: var(--radius);
