--- a/style.css
+++ b/style.css
@@ -44,8 +44,13 @@ select {
   border: 1px solid #efefef;
 }
 
-img {
+th {
   cursor: pointer;
+}
+
+th:hover {
+  text-decoration: underline;
+  font-size: 20px;
 }
 
 #payment-form {
