--- a/style.css
+++ b/style.css
@@ -29,6 +29,19 @@ button {
   clear: both;
 }
 
+.items {
+  float: right;
+  padding-right: 5px;
+}
+
+.information {
+  float: left;
+  padding-left: 5px;
+  background-color: #eee;
+  border: 1px solid black;
+  border-radius: 10;
+}
+
 a {
   color: var(--accent-color);
   font-weight: 900;
