--- a/style.css
+++ b/style.css
@@ -112,7 +112,8 @@ nav {
   background-color: yellow;
   border: 1px solid white;
   border-radius: 10px;
-  font-size: 40px;
+  text-align: center;
+  font-size: 20px;
   display: inline-block;
   padding: 20px 20px 5px 5px;
 }
