--- a/style.css
+++ b/style.css
@@ -196,6 +196,7 @@ input[type=range]::-webkit-slider-thumb {
 }
 
 input[type=range]::-moz-range-thumb {
+  -webkit-appearance: none;
   pointer-events: all;
   width: 24px;
   height: 24px;
