--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ nav {
 .rangeContainer {
   display: flex;
   flex-direction: column;
+  width: 10%;
   margin: 35% auto;
 }
 
@@ -196,7 +197,6 @@ input[type=range]::-webkit-slider-thumb {
 }
 
 input[type=range]::-moz-range-thumb {
-  -webkit-appearance: none;
   pointer-events: all;
   width: 24px;
   height: 24px;
