--- a/style.css
+++ b/style.css
@@ -86,6 +86,10 @@ nav {
   margin: none;
 }
 
+header {
+  display: flex;
+}
+
 .stick {
   position: sticky;
   top: 0;
@@ -104,6 +108,13 @@ nav {
 
 .menu:hover {
   border: 1px solid black;
+}
+
+.headTitle {
+  text-align: left;
+  padding-left: 15px;
+  margin-right: 20px;
+  font-size: xx-large;
 }
 
 .cartBtn {
