--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ header {
   text-align: left;
   padding-left: 15px;
   margin-right: 20px;
-  font-size: xx-large;
+  font-size: larger;
 }
 
 .cartBtn {
