--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ header {
   border: 1px solid #eee;
 }
 
+.find,
 .menu:hover {
   border: 1px solid black;
 }
@@ -114,7 +115,7 @@ header {
   text-align: left;
   padding-left: 15px;
   margin-right: 20px;
-  font-size: larger;
+  font-size: x-large;
 }
 
 .cartBtn {
