--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ header {
   text-align: left;
   padding-left: 15px;
   margin-right: 20px;
-  font-size: x-large;
+  font-size: 35px;
 }
 
 .cartBtn {
