--- a/style.css
+++ b/style.css
@@ -32,6 +32,14 @@ footer {
   padding-right: 5px;
 }
 
+#searchItems {
+  margin: none;
+  z-index: 1;
+  color: black;
+  background-color: white;
+  box-shadow: 10px 10px 50px -20x black;
+}
+
 .information {
   float: left;
   padding-left: 5px;
