--- a/style.css
+++ b/style.css
@@ -106,6 +106,12 @@ th {
   font-size: 0.7em;
 }
 
+#CheckoutBtn {
+  padding: 5px 10px 5px 10px;
+  text-align: center;
+  border-radius: 10px;
+}
+
 nav {
   display: flex;
   justify-content: center;
