--- a/style.css
+++ b/style.css
@@ -347,21 +347,27 @@ header {
   text-decoration: underline;
 }
 
-@keyframes cartBtnClicked {
-  10% {
-  }
-  20% {
-  }
-  30% {
-  }
-  40% {
-  }
-  50% {
-  }
-  60% {
-  }
-  80% {
-  }
-  100% {
-  }
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
+}
+
+.price {
+  color: grey;
+  font-size: 22px;
+}
+
+.card button {
+  border: none;
+  outline: 0;
+  padding: 12px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
 }
