--- a/style.css
+++ b/style.css
@@ -218,6 +218,14 @@ hr {
   width:60%;
 }
 
+.genre {
+  float: left;
+  padding: 5px 15px 5px 15px;
+  color: white;
+  background-color: black;
+  border-radius: 20px;
+}
+
 .row {
   margin: none;
   padding: none;
