--- a/style.css
+++ b/style.css
@@ -14,6 +14,13 @@ main {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.filter {
+  float: left;
+  margin-left: 5px;
+  padding: 5px 5px 5px 5px;
+  position: fixed;
+}
+
 h1 {
     text-align: center;
     margin: 1rem 0;
