--- a/style.css
+++ b/style.css
@@ -14,6 +14,21 @@ main {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.newRibbon,
+discountRibbon{
+  width: 60px;
+  font-size: 14px;
+  padding: 4px;
+  position: absolute;
+  right: -25px;
+  top: -12px;
+  text-align: center;
+  border-radius: 25px;
+  transform: rotate(20deg);
+  background-color: red;
+  color: white;
+}
+
 .filter {
   float: left;
   margin-left: 5px;
