--- a/style.css
+++ b/style.css
@@ -473,7 +473,7 @@ header {
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
-  margin: auto;
+  margin-right: 5%;
   text-align: center;
   font-family: arial;
   padding:none;
