--- a/style.css
+++ b/style.css
@@ -212,6 +212,11 @@ hr {
         justify-content: center;
     }
 
+    .container {
+        width: 100%;
+        padding: 2rem;
+    }
+
     .cart {
         padding: 2rem;
         width: 100%;
@@ -304,6 +309,11 @@ hr {
   margin: none;
   padding: none;
   float: left;
+}
+
+.container {
+  position: relative;
+  display: none;
 }
 
 #imgtext {
@@ -446,10 +456,6 @@ header {
   padding: 20px 20px 5px 5px;
 }
 
-.displayNone {
-  display: none;
-}
-
 .in {
   cursor: pointer;
 }
@@ -467,7 +473,7 @@ header {
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
-  margin-right: 5%;
+  margin: auto;
   text-align: center;
   font-family: arial;
   padding:none;
@@ -478,101 +484,14 @@ header {
   font-size: 22px;
 }
 
-.container {
-  background-color: #fff;
-  width: 95%;
-  margin: 0 auto;
-  min-height: 1000px;
-  display: flex;
-}
-
-.sidebar {
-  flex: 1;
-  background-color: #f5f6fa;
-  padding: 10px;
-}
-
-.sidebar input[type="text"] {
-  padding: 5px 5px;
-  outline: none;
-  width: 100%;
-  margin-bottom: 15px;
-}
-
-.sidebar h3 {
-  font-weight: 600;
-  margin-bottom: 10px;
-}
-
-.sidebar ul {
-  list-style: none;
-}
-
-.sidebar ul li {
-  margin: 5px 0;
-  padding-left: 5px;
+.card button {
+  border: none;
+  outline: 0;
+  padding: 12px;
+  color: white;
+  background-color: #000;
+  text-align: center;
   cursor: pointer;
-}
-.sidebar ul li:hover {
-  background-color: #dcdde1;
-}
-
-.content {
-  flex: 4;
-}
-
-.products {
   width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  padding: 10px;
-  gap: 10px;
-  cursor: pointer;
-}
-
-.product {
-  width: 250px;
-  display: flex;
-  flex-direction: column;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  overflow: hidden;
-}
-
-.product .img {
-  flex: 1;
-}
-
-.product .img img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  transition: 0.5s;
-  transform: scale(0.75);
-}
-
-.product:hover img {
-  transform: scale(1);
-}
-
-.product .product-details {
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.product-details span:nth-child(1) {
-  color: #e74c3c;
-  font-weight: 600;
-}
-
-.product-details span:nth-child(2) {
-  color: #2980b9;
-  font-weight: 600;
-}
-
-.product-details span:nth-child(3) {
-  font-size: 11px;
-  font-weight: 600;
-  color: #16a085;
+  font-size: 18px;
 }
