--- a/style.css
+++ b/style.css
@@ -14,14 +14,11 @@ main {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.newRibbon,
-.discountRibbon{
+.ribbon{
   width: 60px;
   font-size: 14px;
   padding: 4px;
   position: absolute;
-  right: -25px;
-  top: -12px;
   text-align: center;
   border-radius: 25px;
   transform: rotate(20deg);
