--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@ main {
 }
 
 .ribbon{
-  width: 60px;
+  width: 5%;
   font-size: 14px;
-  padding: 4px;
+  padding: 0.4%;
   position: absolute;
   text-align: center;
   border-radius: 25px;
