--- a/style.css
+++ b/style.css
@@ -519,8 +519,10 @@ header {
   padding: 10px;
   background-color: white;
 }
-
-.form-container input[type=text], .form-container input[type=password] {
+.paymentForm-container input[type=text],
+.paymentForm-container input[type=password]
+.form-container input[type=text],
+.form-container input[type=password] {
   width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
@@ -528,7 +530,10 @@ header {
   background: #f1f1f1;
 }
 
-.form-container input[type=text]:focus, .form-container input[type=password]:focus {
+.paymentForm-container input[type=text]:focus,
+.paymentForm-container input[type=password]:focus,
+.form-container input[type=text]:focus,
+.form-container input[type=password]:focus {
   background-color: #ddd;
   outline: none;
 }
