--- a/style.css
+++ b/style.css
@@ -513,10 +513,6 @@ header {
   opacity: 0.8;
 }
 
-.cancel {
-  background-color: red;
-}
-
 .form-container .btn:hover, 
 .open-button:hover {
   opacity: 1;
@@ -526,4 +522,25 @@ header {
 .minus {
   border: none;
   border-radius: 25px;
+}
+
+.btn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 12px;
+  margin: 10px 0;
+  border: none;
+  width: 100%;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: 17px;
+}
+
+.btn:hover {
+  background-color: #45a049;
+}
+
+.cancel,
+.btn .cancel {
+  background-color: red;
 }
