--- a/style.css
+++ b/style.css
@@ -113,15 +113,28 @@ h1 {
   font-size: 15px;
 }
 
-.dropdownItems {
-  background-color: #777;
-  cursor: pointer;
-  display: none;
+.dropdown {
+  position: relative;
+  display: inline-block;
 }
 
-.dropdownItems:hover {
-  background-color: #eee;
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+  font-size: 20px;
+}
+
+.dropdown:hover .dropdown-content {
   display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: black;
 }
 
 .icon {
