--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@ h1 {
 .dropdown-content {
   display: none;
   position: absolute;
+  text-align: center;;
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
